--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 header {
-  height: 30%;
+  height: 35%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,10 +13,12 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  padding-top: 10px;
 }
 
 h1 {
   color: white;
+  font-weight: 400;
 }
 
 .searchBar {
@@ -45,16 +47,19 @@ h1 {
   width: 10%;
   height: 100%;
   border-radius: 0 15px 15px 0;
-  background-color: hsl(0, 0%, 17%);
+  background-color: black;
   color: white;
   outline: none;
   cursor: pointer;
 }
 
+.searchBar > button:hover {
+  background-color: hsl(0, 0%, 17%);
+}
+
 .infoContainer {
   background-color: white;
   width: 80%;
-  height: 150px;
   position: absolute;
   top: 78%;
   border-radius: 15px;
@@ -68,9 +73,14 @@ h1 {
 
 .infoContainer .title {
   color: grey;
-  font-weight: normal;
-  font-size: 11px;
+  font-weight: 500;
+  font-size: 12px;
   margin-bottom: 15px;
+  letter-spacing: 2px;
+}
+
+.infoContainer .content {
+  font-size: 19px;
 }
 
 .infoDiv {
@@ -83,7 +93,7 @@ h1 {
 }
 
 .infoDiv + .infoDiv:after {
-  content: '';
+  content: "";
   position: absolute;
   left: 0px;
   top: 25%;
@@ -92,5 +102,30 @@ h1 {
 }
 
 #mapid {
-  height: 70%;
+  height: 65%;
+}
+
+@media only screen and (max-width: 768px) {
+  .infoContainer {
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    top: 53%;
+  }
+
+  .infoContainer .infoDiv::after {
+    border: 0;
+  }
+
+  .searchBar {
+    width: 70%;
+  }
+
+  .searchBar > button {
+    width: 20%;
+  }
+
+  .infoDiv {
+    padding: 10px 20px;
+  }
 }
